fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ li:hover {
 
 footer {
     width: 950px;
-    margin: 1em auto;
+    margin: 1.5em auto 1em auto;
     text-align: center;
     font-size: 0.6em;
     color: #888;
@@ -78,7 +78,7 @@ footer {
 #wire {
     width: 950px;
     margin: 0 auto;
-    padding: 25px 20px 0 20px;
+    padding: 15px 20px 10px 20px;
     background-color: rgba(255,255,255, 0.5);
     box-shadow: 0 10px 20px rgba(0,0,0, 0.1);
     border: 1px solid rgba(255,255,255, 0.6);
@@ -93,7 +93,7 @@ footer {
     }
 
 .section {
-    margin: 1.5em 0;
+    margin: 2em 0 0 0;
 }
 
 .article {
